--- a/UI.css
+++ b/UI.css
@@ -33,7 +33,7 @@ body .web-container .web-title::first-letter {
 }
 body .web-container #playstage {
   position: absolute;
-  right: 1%;
+  right: 1vw;
   top: 1vh;
   width: 8vmax;
   height: 8vmax;
@@ -370,16 +370,10 @@ body .web-container .web-button::first-letter {
   }
 }
 @-webkit-keyframes beatsOhYeah {
-  12.5% {
-    scale: 1.5;
-  }
-  25% {
-    scale: 1.2;
-  }
-  37.5%, 62.5%, 82.5% {
+  12.5%, 37.5%, 62.5%, 82.5% {
     scale: 1.3;
   }
-  50%, 75% {
+  25%, 50%, 75% {
     scale: 1.1;
   }
   100% {
@@ -387,16 +381,10 @@ body .web-container .web-button::first-letter {
   }
 }
 @keyframes beatsOhYeah {
-  12.5% {
-    scale: 1.5;
-  }
-  25% {
-    scale: 1.2;
-  }
-  37.5%, 62.5%, 82.5% {
+  12.5%, 37.5%, 62.5%, 82.5% {
     scale: 1.3;
   }
-  50%, 75% {
+  25%, 50%, 75% {
     scale: 1.1;
   }
   100% {
