--- a/UI.scss
+++ b/UI.scss
@@ -29,7 +29,7 @@ body{
         }
         & #playstage{
             position: absolute;
-            right: 1%;
+            right: 1vw;
             top: 1vh;
             width: 8vmax;
             height:8vmax;
@@ -350,18 +350,14 @@ body{
     50%{transform: scale(1);}
 }
 @keyframes beatsOhYeah {
-    12.5% {
-        scale: 1.5;
-              }
-      25% {
-        scale: 1.2;
-              }
-      37.5%,
+    
+      
+      12.5%,37.5%,
       62.5%,
       82.5% {
         scale: 1.3;
       }
-      50%,
+      25%,50%,
       75% {
         scale: 1.1;
       }
